objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Donor_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor Type</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Constituent_Types__c</fullName>
        <label>Constituent Type/s</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Major Donor</fullName>
                </value>
                <value>
                    <fullName>Conservation</fullName>
                </value>
                <value>
                    <fullName>Covenanting Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Contact_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contact Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_RE_Constituent_Import_ID__c</fullName>
        <label>RE Constituent Import ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_RE_Constnt_ID__c</fullName>
        <label>RE Constnt ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>